--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -68,6 +68,7 @@ a {
 @import 'startanimation';
 
 @import 'modules/border';
+@import 'modules/seperator';
 @import 'modules/header';
 @import 'modules/nav';
 @import 'modules/start--term';
