--- a/assets/css/_fonts.scss
+++ b/assets/css/_fonts.scss
@@ -9,87 +9,15 @@
     font-weight: 400;
     font-style: normal;
 }
-@font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/roboto-light-webfont.eot');
-    src: url('../fonts/roboto-light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/roboto-light-webfont.woff2') format('woff2'),
-         url('../fonts/roboto-light-webfont.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/roboto-regular-webfont.eot');
-    src: url('../fonts/roboto-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/roboto-regular-webfont.woff2') format('woff2'),
-         url('../fonts/roboto-regular-webfont.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/roboto-medium-webfont.eot');
-    src: url('../fonts/roboto-medium-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/roboto-medium-webfont.woff2') format('woff2'),
-         url('../fonts/roboto-medium-webfont.woff') format('woff');
-    font-weight: 500;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Quattrocento Sans';
-    src: url('../fonts/quattrocentosans-regular-webfont.eot');
-    src: url('../fonts/quattrocentosans-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/quattrocentosans-regular-webfont.woff2') format('woff2'),
-         url('../fonts/quattrocentosans-regular-webfont.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Signika';
-    src: url('../fonts/signika-light-webfont.eot');
-    src: url('../fonts/signika-light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/signika-light-webfont.woff2') format('woff2'),
-         url('../fonts/signika-light-webfont.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Signika';
-    src: url('../fonts/signika-regular-webfont.eot');
-    src: url('../fonts/signika-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/signika-regular-webfont.woff2') format('woff2'),
-         url('../fonts/signika-regular-webfont.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Signika';
-    src: url('../fonts/signika-semibold-webfont.eot');
-    src: url('../fonts/signika-semibold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/signika-semibold-webfont.woff2') format('woff2'),
-         url('../fonts/signika-semibold-webfont.woff') format('woff');
-    font-weight: 600;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Signika';
-    src: url('../fonts/signika-bold-webfont.eot');
-    src: url('../fonts/signika-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/signika-bold-webfont.woff2') format('woff2'),
-         url('../fonts/signika-bold-webfont.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'SignikaNegative';
-    src: url('../fonts/signikanegative-light-webfont.eot');
-    src: url('../fonts/signikanegative-light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/signikanegative-light-webfont.woff2') format('woff2'),
-         url('../fonts/signikanegative-light-webfont.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'SignikaNegative';
+//     src: url('../fonts/signikanegative-light-webfont.eot');
+//     src: url('../fonts/signikanegative-light-webfont.eot?#iefix') format('embedded-opentype'),
+//          url('../fonts/signikanegative-light-webfont.woff2') format('woff2'),
+//          url('../fonts/signikanegative-light-webfont.woff') format('woff');
+//     font-weight: 300;
+//     font-style: normal;
+// }
 @font-face {
     font-family: 'SignikaNegative';
     src: url('../fonts/signikanegative-regular-webfont.eot');
@@ -108,15 +36,15 @@
     font-weight: 600;
     font-style: normal;
 }
-@font-face {
-    font-family: 'SignikaNegative';
-    src: url('../fonts/signikanegative-bold-webfont.eot');
-    src: url('../fonts/signikanegative-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/signikanegative-bold-webfont.woff2') format('woff2'),
-         url('../fonts/signikanegative-bold-webfont.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'SignikaNegative';
+//     src: url('../fonts/signikanegative-bold-webfont.eot');
+//     src: url('../fonts/signikanegative-bold-webfont.eot?#iefix') format('embedded-opentype'),
+//          url('../fonts/signikanegative-bold-webfont.woff2') format('woff2'),
+//          url('../fonts/signikanegative-bold-webfont.woff') format('woff');
+//     font-weight: 700;
+//     font-style: normal;
+// }
 
 
 body {
