--- a/assets/css/modules/_nav.scss
+++ b/assets/css/modules/_nav.scss
@@ -76,26 +76,19 @@
         }
       }
     }
-    &--seperator {
+    .seperator {
       margin: auto;
-      width: 50%;
-      display: flex;
-      flex-direction: row;
       .circle {
-        margin: auto;
-        width: 11px;
-        height: 11px;
-        border-radius: 6px;
-        border: 1px solid white;
-        opacity: 0;
+        width: 10px;
+        height: 10px;
+        border-width: 1px;
+        border-color: white;
         transform: scale(0);
         transition: $duration;
       }
       .line {
-        margin: auto;
-        width: 40%;
         height: 1px;
-        background: white;
+        background-color: white;
         opacity: 0;
         transform: scaleX(0);
         transition: $duration;
@@ -123,24 +116,23 @@
     }
     &.active {
       pointer-events: auto;
+      .seperator {
+        .circle {
+          transform: none;
+          transition-delay: $duration * 2;
+        }
+        .line {
+          opacity: 1;
+          transform: none;
+          transition-delay: $duration * 2.5;
+        }
+      }
       .hamburger {
         div:nth-of-type(1) {
           transform: translate(0,2.5px) rotate(-45deg);
         }
         div:nth-of-type(2) {
           transform: translate(0,-2.5px) rotate(45deg);
-        }
-      }
-      .nav--seperator {
-        .circle {
-          opacity: 1;
-          transform: none;
-          transition-delay: $duration*2;
-        }
-        .line {
-          opacity: 1;
-          transform: none;
-          transition-delay: $duration*3;
         }
       }
       ul {
