--- a/assets/css/modules/_start--term.scss
+++ b/assets/css/modules/_start--term.scss
@@ -5,8 +5,8 @@
   transition: 600ms;
   color: $color;
   transform: translateZ(0);
-  backface-visibility: hidden; // prevent flickering
-  perspective: 1000; // prevent flickering
+  backface-visibility: hidden;
+  perspective: 1000;
   transition: $duration, transform $duration ease-out, z-index 0s $duration;
   &:nth-of-type(1) {
     left: 0%;
@@ -61,19 +61,11 @@
     margin-left: -1.9em;
     padding-left: 1.9em;
     transition: $duration;
-    backface-visibility: hidden; // prevent flickering
-    // perspective: 1000; // prevent flickering
-    // &:focus, &:hover {
-    //   h1 span {
-    //     &::after {
-    //       border-bottom-color: $color;
-    //     }
-    //   }
-    // }
+    backface-visibility: hidden;
   }
   .circle {
     position: absolute;
-    top: 4px;
+    top: 5px;
     left: -20px;
     width: 7px;
     height: 7px;
@@ -82,36 +74,13 @@
     background-color: $background;
     transition: $duration;
   }
-  .cross {
-    display: none;
-    position: absolute;
-    top: 8.5px;
-    left: -20.5px;
-    width: 12px;
-    height: 1px;
-    transform: scale(0);
-    transition: $duration;
-    div {
-      position: absolute;
-      width: 12px;
-      height: 2px;
-      display: block;
-      content: '';
-      background-color: white;
-      transform: rotate(45deg);
-      transition: $duration;
-      &:nth-of-type(2) {
-        transform: rotate(-45deg);
-      }
-    }
-  }
   h1, .text {
     display: inline-block;
     padding: 3px 5px;
     background: white;
     text-decoration: inherit;
-    backface-visibility: hidden; // prevent flickering
-    perspective: 1000; // prevent flickering
+    backface-visibility: hidden;
+    perspective: 1000;
     transition: $duration;
   }
   h1 {
@@ -126,19 +95,7 @@
       position: relative;
       display: inline-block;
       margin-top: 1px;
-      // line-height: 0.75;
       transition: $duration;
-      // text-shadow: 2px 0 0 white, -2px 0 0 white, 1px 0 0 white, -1px 0 0 white, 0 -1px 0 white;
-      // &::after {
-      //   z-index: -1;
-      //   display: block;
-      //   position: absolute;
-      //   left: 0.5px;
-      //   right: 0.5px;
-      //   content: '';
-      //   border-bottom: 1px solid transparent;
-      //   transition: $duration;
-      // }
     }
   }
   .text {
@@ -148,7 +105,6 @@
     padding: 13px 15px;
     line-height: 1.3;
     opacity: 0;
-    // filter: blur(2px);
     transform: translateY(-10px) translateZ(0);
     transition: $duration ease-in;
     hyphens: auto;
@@ -169,13 +125,6 @@
     transition-property: z-index;
     transition-duration: 0s;
     transition-delay: 0s;
-    // z-index: 10;
-    // .circle {
-    //   transform: scale(0);
-    // }
-    // .cross {
-    //   transform: scale(1);
-    // }
     h1 {
       padding-left: 15px;
       padding-right: 15px;
@@ -211,6 +160,12 @@
     transform: none !important;
     a {
       display: inline-block;
+    }
+    .circle {
+      top: 6px;
+      left: -21px;
+      width: 8px;
+      height: 8px;
     }
     .text {
       box-sizing: content-box;
