--- a/assets/css/modules/_windows.scss
+++ b/assets/css/modules/_windows.scss
@@ -59,7 +59,7 @@
       margin: 0;
       width: auto;
       max-height: calc(100vh - 4.6em);
-      padding: 20px;
+      padding: 1em 1em 1.5em;
       overflow: auto;
       -webkit-overflow-scrolling: touch;
       blockquote {
@@ -67,7 +67,7 @@
       }
     }
   }
-  @media (width: 320px), (width: 375px), (width: 414px) {
+  @media (width: 320px), (width: 375px), (width: 414px) { // iOS-Fix
     &--container {
       max-height: calc(100vh - 4.6em - 64px);
     }
