--- a/assets/css/sites/_kontakt.scss
+++ b/assets/css/sites/_kontakt.scss
@@ -10,7 +10,7 @@
   backface-visibility: hidden; // prevent flickering
   &--card {
     box-sizing: border-box;
-    margin: calc(24vh + 40px * 3) auto;
+    margin: calc(24vh + 120px) auto;
     text-align: center;
     font-size: 1em;
     line-height: 1.3;
@@ -96,9 +96,6 @@
       perspective: 1000; // prevent flickering
     }
   }
-  .seperator {
-    display: none;
-  }
   &[hidden] {
     opacity: 0.1;
     transition-delay: $duration;
@@ -129,34 +126,21 @@
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     &--card {
-      margin: 100px 0;
+      margin: 90px 0 100px;
     }
     &--square--container {
-      top: calc(64px);
+      top: 58px;
+      width: 210px;
+      height: 210px;
+      transform: translate3d(-105px,0,0) rotate(45deg);
     }
     &--footer {
       position: static;
       margin-bottom: 2em;
-      padding: 10px;
-    }
-    .seperator {
-      margin: 0 auto 2em;
-      width: 50%;
-      height: 20px;
-      display: flex;
-      flex-direction: row;
-      .circle {
-        margin: auto;
-        width: 11px;
-        height: 11px;
-        border-radius: 6px;
-        border: 1px solid white;
-      }
-      .line {
-        margin: auto;
-        width: 40%;
-        height: 1px;
-        background: white;
+      padding: 0 15px;
+      font-size: 0.85em;
+      &--imprint {
+        font-size: 1em;
       }
     }
   }
