--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,9 +117,26 @@ a {
   font-weight: 600;
   font-style: normal; }
 
+@font-face {
+  font-family: 'SignikaNegative';
+  src: url("../fonts/signikanegative-bold-webfont.eot");
+  src: url("../fonts/signikanegative-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/signikanegative-bold-webfont.woff2") format("woff2"), url("../fonts/signikanegative-bold-webfont.woff") format("woff");
+  font-weight: 700;
+  font-style: normal; }
+
 body {
   font-family: "SignikaNegative", sans-serif;
   -webkit-font-smoothing: antialiased; }
+
+html, body {
+  height: 100%; }
+
+body {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
 
 body {
   color: white;
@@ -883,18 +900,15 @@ a {
       .window--container {
         margin: 0;
         width: auto;
-        max-height: calc(100vh - 4.6em);
+        max-height: 100%;
         padding: 1em 1em 1.5em;
         overflow: auto;
         -webkit-overflow-scrolling: touch; }
         .window--container blockquote {
           width: auto; } }
-  @media (width: 320px), (width: 375px), (width: 414px) {
-    .window--container {
-      max-height: calc(100vh - 4.6em - 64px); } }
 
 .start {
-  position: relative;
+  position: absolute;
   height: calc(100vh - 74px);
   -webkit-transition: 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
   transition: 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -923,7 +937,7 @@ a {
       top: 4em;
       width: 100vw;
       height: auto;
-      max-height: calc(100vh - 4em);
+      max-height: calc(100% - 4em);
       padding: 0;
       overflow: auto;
       -webkit-overflow-scrolling: touch;
@@ -932,9 +946,6 @@ a {
       .start .container {
         position: static;
         padding: 1em 0 1em 36px; } }
-  @media (width: 320px), (width: 375px), (width: 414px) {
-    .start {
-      max-height: calc(100vh - 4em - 64px); } }
 
 #start--drawing {
   z-index: -1;
@@ -997,6 +1008,8 @@ a {
       margin-bottom: 0.65em; }
       .vita--textbox p:last-of-type {
         margin-bottom: 0; }
+    .vita--textbox abbr {
+      border-bottom-color: #a1cad2; }
   .vita[hidden] {
     opacity: 0.1; }
     @media (min-width: 768px) {
@@ -1011,7 +1024,7 @@ a {
       left: 25%;
       width: 100vw;
       height: auto;
-      max-height: calc(100vh - 4em);
+      max-height: calc(100% - 4em);
       padding: 0.6em 0 0;
       overflow: auto;
       -webkit-overflow-scrolling: touch;
@@ -1033,9 +1046,6 @@ a {
                 hyphens: auto; }
         .vita--textbox p {
           margin-bottom: 0.5em; } }
-  @media (width: 320px), (width: 375px), (width: 414px) {
-    .vita {
-      max-height: calc(100vh - 4em - 64px); } }
 
 .arbeitsweise {
   position: absolute;
@@ -1196,8 +1206,7 @@ a {
       top: 4em;
       left: 50%;
       width: 100vw;
-      height: auto;
-      max-height: calc(100vh - 4em);
+      height: calc(100% - 4em);
       padding: 0.6em 0 0;
       overflow: auto;
       -webkit-overflow-scrolling: touch;
@@ -1213,13 +1222,12 @@ a {
           display: none; }
         .arbeitsweise--gallery--images--container {
           display: block; }
+          .arbeitsweise--gallery--images--container figure img {
+            height: auto; }
           .arbeitsweise--gallery--images--container figure figcaption {
             display: block;
             padding: 0.5em 15px 2em;
             line-height: 1.3; } }
-  @media (width: 320px), (width: 375px), (width: 414px) {
-    .arbeitsweise {
-      max-height: calc(100vh - 4em - 64px); } }
 
 .kontakt {
   position: absolute;
@@ -1351,7 +1359,7 @@ a {
       left: 75%;
       width: 100vw;
       height: auto;
-      max-height: calc(100vh - 4em);
+      height: calc(100% - 4em);
       padding: 0;
       overflow: auto;
       -webkit-overflow-scrolling: touch; }
@@ -1370,6 +1378,4 @@ a {
         font-size: 0.85em; }
         .kontakt--footer--imprint {
           font-size: 1em; } }
-  @media (width: 320px), (width: 375px), (width: 414px) {
-    .kontakt {
-      max-height: calc(100vh - 4em - 64px); } }
+/*# sourceMappingURL=style.css.map */
