--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,17 @@ $easeOutBack: cubic-bezier(0.175, 0.885, 0.320, 1.275);
 
 $mainPadding: 34px;
 
+html, body {
+  height: 100%;
+}
+
+body {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 
 body {
   color: white;
