--- a/assets/css/modules/_nav.scss
+++ b/assets/css/modules/_nav.scss
@@ -1,11 +1,14 @@
 .nav {
   position: absolute;
   top: calc(24vh + 79px);
-  z-index: 10;
+  z-index: 5;
   padding-left: 15px;
   font-weight: 400;
   color: $lightblue;
   transition: $duration;
+  @media (max-height: 640px) {
+    top: calc(24vh + 17px);
+  }
   .hamburger {
     width: 12px;
     height: 10px;
