--- a/assets/css/modules/_start--term.scss
+++ b/assets/css/modules/_start--term.scss
@@ -4,64 +4,50 @@
   top: 0;
   transition: 600ms;
   color: $color;
-  transform: translateZ(0);
-  backface-visibility: hidden;
-  perspective: 1000;
+  pointer-events: none;
   transition: $duration, transform $duration ease-out, z-index 0s $duration;
   &:nth-of-type(1) {
-    left: 0%;
-    top: 50%;
+    left: 9%;
+    top: 51%;
   }
   &:nth-of-type(2) {
-    left: 7%;
-    top: 15%;
+    left: 5%;
+    top: 12%;
   }
   &:nth-of-type(3) {
-    left: 12%;
-    top: 82%;
+    left: 3%;
+    top: 86%;
   }
   &:nth-of-type(4) {
-    left: 36%;
-    top: 40%;
+    left: 42%;
+    top: 44%;
   }
   &:nth-of-type(5) {
-    left: 38%;
-    top: 9%;
+    left: 45%;
+    top: 10%;
   }
   &:nth-of-type(6) {
-    left: 42%;
-    top: 75%;
+    left: 50%;
+    top: 80%;
   }
   &:nth-of-type(7) {
-    left: 64%;
-    top: 21%;
+    left: 96%;
+    top: 17%;
   }
   &:nth-of-type(8) {
-    left: 68%;
+    left: 92%;
     top: 90%;
   }
   &:nth-of-type(9) {
-    left: 73%;
-    top: 55%;
-  }
-  &:nth-of-type(10) {
-    left: 90%;
-    top: 5%;
-  }
-  &:nth-of-type(11) {
-    left: 97%;
-    top: 30%;
-  }
-  &:nth-of-type(12) {
-    left: 98%;
-    top: 78%;
+    left: 87%;
+    top: 52%;
   }
   a {
-    display: block;
+    display: inline-block;
     margin-left: -1.9em;
     padding-left: 1.9em;
     transition: $duration;
-    backface-visibility: hidden;
+    pointer-events: auto;
   }
   .circle {
     position: absolute;
@@ -79,8 +65,6 @@
     padding: 3px 5px;
     background: white;
     text-decoration: inherit;
-    backface-visibility: hidden;
-    perspective: 1000;
     transition: $duration;
   }
   h1 {
@@ -89,7 +73,6 @@
     margin-bottom: 2px;
     font-weight: 400;
     letter-spacing: 0.05em;
-    transform: translateZ(0);
     span {
       z-index: 1;
       position: relative;
@@ -105,11 +88,16 @@
     padding: 13px 15px;
     line-height: 1.3;
     opacity: 0;
-    transform: translateY(-10px) translateZ(0);
+    transform: translateY(-10px);
     transition: $duration ease-in;
     hyphens: auto;
     &[hidden] {
-      display: none;
+      pointer-events: none;
+    }
+    em {
+      padding: 0 0.05em;
+      font-style: normal;
+      letter-spacing: 0.05em;
     }
   }
   a:focus, a:hover {
@@ -121,10 +109,12 @@
   }
   &.open {
     z-index: 1;
-    transform: translateZ(100px);
     transition-property: z-index;
     transition-duration: 0s;
     transition-delay: 0s;
+    a, .text {
+      pointer-events: auto;
+    }
     h1 {
       padding-left: 15px;
       padding-right: 15px;
@@ -136,7 +126,7 @@
     }
     .text {
       filter: none;
-      transform: translateZ(0);
+      transform: none;
       opacity: 1;
       transition-delay: $duration;
       transition-timing-function: $easeOutBack;
@@ -151,6 +141,24 @@
         opacity: 1;
         filter: none;
         transition-delay: 0s;
+      }
+    }
+  }
+  @media (max-width: 1180px) {
+    &:nth-of-type(7),
+    &:nth-of-type(8),
+    &:nth-of-type(9) {
+      .text {
+        max-width: 280px;
+      }
+    }
+  }
+  @media (max-width: 960px) {
+    &:nth-of-type(7),
+    &:nth-of-type(8),
+    &:nth-of-type(9) {
+      .text {
+        max-width: 240px;
       }
     }
   }
@@ -174,6 +182,9 @@
       overflow: hidden;
       padding-top: 0;
       padding-bottom: 0;
+      &[hidden] {
+        display: none;
+      }
     }
     &.inactive {
       a {
