--- a/assets/css/sites/_vita.scss
+++ b/assets/css/sites/_vita.scss
@@ -3,27 +3,31 @@
   top: 25%;
   left: 0;
   right: 0;
-  height: calc(100vh - 74px);
+  display: flex;
   box-sizing: border-box;
-  padding: calc(24vh - 37px) 249 / 1372 * 100% 0;
   transition: $duration * 2 cubic-bezier(0.645, 0.045, 0.355, 1.000);
   overflow: hidden;
-  transform: translateZ(0);
-  backface-visibility: hidden; // prevent flickering
   &--image {
-    float: right;
-    margin-top: 40px;
-    width: 303 / 875 * 100%;
+    margin-top: calc(24vh + 28px);
+    margin-right: 40 / 1372 * 100%;
+    margin-left: 20px;
+    width: 303 / 1372 * 100%;
     position: relative;
     transition: $duration*2 $duration*1.5 $easeOutBack;
+    order: 1;
+    @media (max-width: 1180px) {
+      width: 418 / 1372 * 100%;
+    }
     img {
       width: 100%;
     }
   }
   &--textbox {
-    float: left;
     box-sizing: border-box;
-    width: 532 / 875 * 100%;
+    margin-top: calc(24vh - 12px);
+    margin-right: 20px;
+    margin-left: 249 / 1372 * 100%;
+    width: 532 / 1372 * 100%;
     padding: 40px;
     color: white;
     line-height: 1.4;
@@ -33,6 +37,13 @@
                 url(../images/corner_bl.svg) bottom left;
     background-color: transparentize($color,0.9);
     background-repeat: no-repeat;
+    @media (max-width: 1180px) {
+      width: 647 / 1372 * 100%;
+    }
+    @media (max-height: 700px) {
+      margin-right: 0;
+      padding: 20px;
+    }
     p {
       margin-bottom: 0.65em;
       &:last-of-type {
@@ -53,6 +64,7 @@
   @media (max-width: 767px) {
     top: 4em;
     left: 25%;
+    display: block;
     width: 100vw;
     height: auto;
     max-height: calc(100% - 4em);
@@ -63,12 +75,14 @@
     &--image {
       float: none;
       width: auto;
-      margin: 0 0 1em;
+      max-width: 420px;
+      margin: 0 auto 1em;
     }
     &--textbox {
       float: none;
-      margin-bottom: 2em;
+      margin: 0 auto 2em;
       width: auto;
+      max-width: 420px;
       padding: 0 15px;
       background: none;
       hyphens: auto;
