--- a/assets/css/modules/_header.scss
+++ b/assets/css/modules/_header.scss
@@ -1,8 +1,7 @@
 .header {
   position: relative;
-  margin: 0 auto;
+  margin: 2em auto;
   width: 15em;
-  padding: 2em;
   z-index: 10;
   text-align: center;
   line-height: 1em;
@@ -91,6 +90,7 @@
     }
   }
   @media (max-width: 767px) {
+    margin: 0 40px;
     width: auto;
     padding: 1em 1em 0.2em;
   }
