--- a/assets/css/modules/_windows.scss
+++ b/assets/css/modules/_windows.scss
@@ -10,11 +10,22 @@
     margin: calc(24vh - 40px) auto;
     color: $color;
     width: 577 / 1372 * 100%;
+    max-height: calc(80vh - 80px);
+    overflow: auto;
     padding: 40px;
     line-height: 1.3;
-    hyphens: auto;
+    // hyphens: auto;
     background: white;
     transition: $duration $duration*2 $easeOutBack;
+    @media (max-width: 1180px) {
+      width: 692 / 1372 * 100%;
+    }
+    @media (max-width: 1024px) {
+      width: 806 / 1372 * 100%;
+    }
+    @media (max-width: 960px) {
+      width: 920 / 1372 * 100%;
+    }
     p {
       margin-bottom: 0.65em;
     }
@@ -23,16 +34,43 @@
     }
     blockquote {
       display: block;
-      margin-top: 0.65em * 2;
-      width: 75%;
+      margin-bottom: 0.65em * 2;
       text-decoration: underline;
       letter-spacing: 0.1em;
+      font-size: 1.2em;
       color: $lightblue;
       font-weight: 600;
       font-style: normal;
       em {
+        display: block;
+        width: 80%;
         font-style: normal;
         font-weight: 400;
+        font-size: 1rem;
+        letter-spacing: 0;
+        text-decoration: none;
+        hyphens: none;
+      }
+    }
+    h2 {
+      margin-top: 1.3em;
+      margin-bottom: 0.65em;
+    }
+    ul, ol {
+      list-style: none;
+      li {
+        margin-bottom: 0.65em;
+        position: relative;
+        &::before {
+          position: absolute;
+          left: -0.8em;
+          top: 0.5em;
+          width: 0.3em;
+          height: 0.3em;
+          border-radius: 50%;
+          background-color: $background;
+          content: '';
+        }
       }
     }
   }
@@ -59,12 +97,19 @@
       margin: 0;
       width: auto;
       max-height: 100%;
-      padding: 1em 1em 1.5em;
       overflow: auto;
       -webkit-overflow-scrolling: touch;
       blockquote {
         width: auto;
       }
+      ul, ol {
+        margin-left: 0.8em;
+      }
+    }
+  }
+  @media (max-width: 420px) {
+    &--container {
+      padding: 1em 1em 1.5em;
     }
   }
 }
