--- a/assets/css/sites/_kontakt.scss
+++ b/assets/css/sites/_kontakt.scss
@@ -3,11 +3,9 @@
   top: 75%;
   left: 0;
   right: 0;
-  height: calc(100vh - 74px);
+  height: calc(100vh - 68px);
   padding: 0 40px;
   transition: $duration * 2 cubic-bezier(0.645, 0.045, 0.355, 1.000);
-  transform: translateZ(0);
-  backface-visibility: hidden;
   &--card {
     box-sizing: border-box;
     margin: calc(24vh + 120px) auto;
@@ -27,7 +25,6 @@
       color: $lightblue;
       transition: $duration, text-shadow 0s $duration;
       &::after {
-        z-index: -1;
         display: block;
         position: absolute;
         left: 40px;
@@ -48,16 +45,15 @@
     }
   }
   &--square--container {
-    z-index: -1;
+    z-index: 0;
     position: absolute;
     left: 50%;
     top: calc(24vh + 83px);
     width: 200px;
     height: 200px;
-    transform: translate3d(-100px,0,0) rotate(45deg);
+    transform: translate(-100px, 0) rotate(45deg);
     transition: $duration*2 $duration*1.5 $easeOutBack;
-    backface-visibility: hidden;
-    perspective: 1000;
+    pointer-events: none;
   }
   &--square {
     position: absolute;
@@ -66,8 +62,6 @@
     top: 0;
     bottom: 0;
     border: 2px solid white;
-    backface-visibility: hidden;
-    perspective: 1000;
     transition: $duration ease-out;
   }
   &--footer {
@@ -91,9 +85,6 @@
       margin-top: 20px;
       opacity: 0.5;
       font-size: 0.85em;
-      transform: translateZ(0); // activate hardware acceleration
-      backface-visibility: hidden;
-      perspective: 1000;
     }
   }
   &[hidden] {
@@ -104,7 +95,7 @@
       transform: scale(0.99);
     }
     .kontakt--square--container {
-      transform: translate3d(-100px,0,0) rotate(45deg) scale(0.92);
+      transform: translate(-100px, 0) rotate(45deg) scale(0.92);
       transition-delay: 0s;
     }
     .kontakt--footer {
@@ -132,11 +123,12 @@
       top: 58px;
       width: 210px;
       height: 210px;
-      transform: translate3d(-105px,0,0) rotate(45deg);
+      transform: translate(-105px, 0) rotate(45deg);
     }
     &--footer {
       position: static;
-      margin-bottom: 2em;
+      margin: 0 auto 2em;
+      max-width: 420px;
       padding: 0 15px;
       font-size: 0.85em;
       &--imprint {
