--- a/assets/css/modules/_border.scss
+++ b/assets/css/modules/_border.scss
@@ -16,8 +16,8 @@
     background: url(../images/bg.jpg) $background bottom center no-repeat;
     background-size: cover;
     transition: 250ms ease-out;
-    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-      background-image: url(..images/bg@2x.jpg);
+    @media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2) {
+      background-image: url(../images/bg@2x.jpg);
     }
   }
   .line {
