--- a/assets/css/sites/_arbeitsweise.scss
+++ b/assets/css/sites/_arbeitsweise.scss
@@ -175,6 +175,7 @@
   }
   &[hidden] {
     opacity: 0.1;
+    overflow: hidden;
     @media (min-width: 768px) {
       filter: blur(8px);
       transform: scale(0.99);
