--- a/assets/css/sites/_start.scss
+++ b/assets/css/sites/_start.scss
@@ -13,6 +13,7 @@
   }
   &[hidden] {
     opacity: 0.1;
+    overflow: hidden;
     @media (min-width: 768px) {
       filter: blur(8px);
       transform: scale(0.99);
