--- a/assets/css/sites/_arbeitsweise.scss
+++ b/assets/css/sites/_arbeitsweise.scss
@@ -11,13 +11,16 @@
     &--nav {
       position: absolute;
       left: 22px;
-      top: calc(24vh + 40px * 6);
+      top: calc(24vh + 40px * 5);
       width: 40px;
-      @media (max-height: 700px) {
+      @media (max-height: 740px) {
         top: calc(24vh + 40px * 4);
       }
-      @media (max-height: 640px) {
+      @media (max-height: 690px) {
         top: calc(24vh + 40px * 3);
+      }
+      @media (max-height: 640px) {
+        top: calc(24vh + 40px * 2);
       }
       &--previous, &--next {
         position: absolute;
@@ -91,17 +94,20 @@
     &--captions {
       position: absolute;
       left: 20px;
-      top: calc(24vh + 40px * 7);
-      width: 263 / 1372 * 100%;;
+      top: calc(24vh + 40px * 6);
+      width: 302 / 1372 * 100%;;
       overflow: hidden;
       @media (max-width: 1180px) {
         width: 377 / 1372 * 100%;;
       }
-      @media (max-height: 700px) {
+      @media (max-height: 740px) {
         top: calc(24vh + 40px * 5);
       }
-      @media (max-height: 640px) {
+      @media (max-height: 690px) {
         top: calc(24vh + 40px * 4);
+      }
+      @media (max-height: 640px) {
+        top: calc(24vh + 40px * 3);
       }
       &--container {
         display: flex;
@@ -111,6 +117,9 @@
           height: 100%;
           flex: 0 0 100%;
           line-height: 1.3;
+        }
+        p {
+          margin-bottom: 0.65em;
         }
       }
     }
@@ -214,8 +223,11 @@
             }
             figcaption {
               display: block;
-              padding: 0.5em 15px 2em;
+              padding: 0.5em 15px 1.35em;
               line-height: 1.3;
+              p {
+                margin-bottom: 0.65em;
+              }
             }
           }
         }
