Mobile Seite überarbeitet
Jetzt eine lange Seite statt mehrerer Seiten nebeneinander

--- a/assets/css/_startanimation.scss
+++ b/assets/css/_startanimation.scss
@@ -116,4 +116,12 @@
       animation: fadeIn 1000ms 4300ms ease-out backwards;
     }
   }
+  @media (max-width: 767px) {
+    .seperator {
+      animation: fadeIn 1000ms 4300ms ease-out backwards;
+    }
+    .vita {
+      animation: fadeIn 1000ms 4300ms ease-out backwards;
+    }
+  }
 }
