--- a/assets/css/sites/_start.scss
+++ b/assets/css/sites/_start.scss
@@ -33,14 +33,11 @@
     }
   }
   @media (max-width: 767px) {
-    top: 4em;
-    width: 100vw;
+    position: relative;
+    top: 0;
     height: auto;
-    max-height: calc(100% - 4em);
     padding: 0;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-    transition-delay: $duration;
+    overflow: visible;
     .container {
       position: static;
       margin: 0 auto;
