--- a/assets/css/modules/_header.scss
+++ b/assets/css/modules/_header.scss
@@ -90,8 +90,13 @@
     }
   }
   @media (max-width: 767px) {
-    margin: 0 40px;
-    width: auto;
+    position: fixed;
+    top: 0;
+    box-sizing: border-box;
+    margin: 0;
+    width: 100%;
+    height: 4.5em;
     padding: 1em 1em 0.2em;
+    background: url(../images/bg.jpg) $background top center no-repeat;
   }
 }
