--- a/assets/css/modules/_nav.scss
+++ b/assets/css/modules/_nav.scss
@@ -47,6 +47,8 @@
     display: none;
   }
   @media (max-width: 767px) {
+    position: fixed;
+    z-index: 11;
     text-align: center;
     top: 0;
     right: 0;
