--- a/assets/css/sites/_vita.scss
+++ b/assets/css/sites/_vita.scss
@@ -63,16 +63,12 @@
     }
   }
   @media (max-width: 767px) {
-    top: 4em;
-    left: 25%;
+    position: relative;
+    top: 0;
     display: block;
-    width: 100vw;
     height: auto;
-    max-height: calc(100% - 4em);
-    padding: 0.6em 0 0;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-    transition-delay: $duration;
+    padding: 4.5em 0 0;
+    overflow: visible;
     &--image {
       float: none;
       width: auto;
@@ -81,10 +77,10 @@
     }
     &--textbox {
       float: none;
-      margin: 0 auto 2em;
+      margin: 0 auto;
       width: auto;
       max-width: 420px;
-      padding: 0 15px;
+      padding: 0 15px 1.35em;
       background: none;
       hyphens: auto;
       p {
