--- a/assets/css/_startanimation.scss
+++ b/assets/css/_startanimation.scss
@@ -116,6 +116,9 @@
       animation: fadeIn 1000ms 4300ms ease-out backwards;
     }
   }
+  .kontakt--banner_global {
+    animation: fadeIn 1000ms 5000ms ease-out backwards;
+  }
   @media (max-width: 767px) {
     .seperator {
       animation: fadeIn 1000ms 4300ms ease-out backwards;
