--- a/assets/css/sites/_kontakt.scss
+++ b/assets/css/sites/_kontakt.scss
@@ -64,6 +64,29 @@
     border: 2px solid white;
     transition: $duration ease-out;
   }
+  &--banner {
+    margin: 120px auto 34px;
+    max-width: 420px;
+    padding-left: 20px;
+    padding-right: 20px;
+    img {
+      max-width: 100%;
+    }
+    @media (min-width: 768px) {
+      display: none;
+    }
+    &_global {
+      display: none;
+      @media (min-width: 768px) {
+        display: block;
+        position: fixed;
+        left: 34px;
+        right: 50%;
+        bottom: 34px + 20px;
+        margin: 0;
+      }
+    }
+  }
   &--footer {
     position: absolute;
     right: 20px;
